# numina

./: Cargo.toml  README.md
src/: dtype.rs  lib.rs  ops.rs  reductions.rs  sorting.rs  tensor.rs
src/array/: mod.rs  shape.rs  stride.rs
src/dtype/: conversions.rs  mod.rs
src/dtype/types/: bfloat16.rs  mod.rs
src/dtype/types/quantized/: int4.rs  mod.rs  u8.rs
